--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1><center><img src="back g.png" height="1150px" width="1700px"></center></h1 
 <p>
 <a href="https://edmbet.com/en/home"><center><img src="Login-Button-PNG-Download-Image.png"height="150px" width="300" alt=""></center></a>
-<a href="https://vb.me/letsChatOnViber"><center><img src="viber no.png"height="150px" width="300" alt=""></center></a>
+<a href=""><center><img src="viber no.png"height="150px" width="300" alt=""></center></a>
 </p>
 </body>
 <BODY BGCOLOR="#000000"></BODY>
